<resources>
    <string name="app_name">SycFramework</string>
    <string name="login">登录</string>
    <string name="password_hint">密码</string>
    <string name="user_name">用户名</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="register">注册</string>
    <string name="add_new_account_title">标题</string>
    <string name="add_new_account_user_name">用户名</string>
    <string name="add_new_account_password">密码</string>
    <string name="add_new_account_save">保存</string>
</resources>
