<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.syc.framework.sycframework.viewmodel.NewAccountViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_new_account_title"
            android:text="@={vm.title}" />

        <EditText
            android:id="@+id/edt_add_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_new_account_user_name"
            android:text="@={vm.userName}" />

        <EditText
            android:id="@+id/edt_add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_new_account_password"
            android:text="@={vm.password}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.create()}"
            android:text="@string/add_new_account_save" />
    </LinearLayout>

</layout>