<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="vm"
            type="com.syc.framework.sycframework.viewmodel.RegisterViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={vm.userName}"
            android:hint="@string/user_name"/>

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={vm.password}"
            android:hint="@string/password_hint" />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={vm.confirmPw}"
            android:hint="@string/password_confirm_hint" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.register()}"
            android:text="@string/register" />
    </LinearLayout>
</layout>